Bug 71757 - Unable enter data in entry fields which require numeric or special characters using VKB
Summary: Unable enter data in entry fields which require numeric or special characters...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-18 19:57 UTC by Anu Reddy
Modified: 2014-05-08 17:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
VKB does not allow numeric data entry. (166.08 KB, image/png)
2013-11-18 19:57 UTC, Anu Reddy
Details

Description Anu Reddy 2013-11-18 19:57:04 UTC
Created attachment 89429 [details]
VKB does not allow numeric data entry.

Unable enter data in entry fields which require numeric or special characters using VKB while testing elf.


Steps
1.	Ensure Weston.ini is configured to automatically launch the keyboard application
2.	Change directory to  ${install-prefix}/bin
3.	Launch Weston : Weston-launch
4.	Launch Weston terminal
5.	execute ELM_ENGINE=wayland_shm ./elementary_test 
6.	'Elementary Tests application' launches
7.	From ‘Elementary Test’ window select ‘Entry Scrolled’ to launch ‘Entry Scrolled’ test 
8.	Go to field that displays ‘0123’ .  This  field requires numeric input.
9.	When VKB appears, click on ‘?123’ key to switch to display numeric keys, however ‘?123’ does not switch the VKB.
10.	Observe that VKB does not display numeric keys to allow numeric user entries       
11.	VKB should allow user to select numeric entries using ‘?123’ key

Expected Result:
User can input alpha numeric/special characters in text entry using VKB. Weston should allow numeric and text entries. (example: sam71@gmail.com, K8N5W6)

Actual Result:
VKB does not allow text entry using the numeric/special characters. User cannot enter a combination of alpha numeric characters in text entry. Examples email: sam71@gmail.com, postal code: K8N5W6. 

Environment:
wayland (HEAD) heads/1.3-0-g84247b7
drm (HEAD) libdrm-2.4.46-0-gc6d73cf
mesa (HEAD) heads/9.2-0-gc8e0d10
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
Comment 1 Manuel Bachmann 2014-04-16 18:18:20 UTC
Hi,

This patch :
http://lists.freedesktop.org/archives/wayland-devel/2014-April/014228.html
solves this.
Comment 2 Kristian Høgsberg 2014-04-17 05:43:09 UTC
commit 301f06b8948edce83138193e57a7d54110b18c3f
Author: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>
Date:   Tue Apr 15 12:38:31 2014 +0200

    keyboard: add the missing symbols layout, fix arabic layout
    
    The "symbols" modifier key of weston-keyboard is no longer
    inactive, but will provide an additionnal layout with
    numerals and special characters.
    
    Fix the Arabic keyboard, which was rendering out of the
    bounds, and now use the Arabic IBM PC keyboard as a
    reference for its standard and new symbols layouts.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=71757
    
    Signed-off-by: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.